--- a/myShop/MyShop.WebUI/Views/ProductManager/Edit.cshtml
+++ b/myShop/MyShop.WebUI/Views/ProductManager/Edit.cshtml
@@ -7,23 +7,28 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "ProductManager", FormMethod.Post, new { encType = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Product</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.product.Id)
+
+<div class="form-horizontal">
+    <h4>Product</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.product.Id)
+
+    <div class="col-md-2">
+        <img class="img-responsive" src="~/Content/Productimages/@Model.product.Image" />
+    </div>
+    <div class="col-md-10">
 
         <div class="form-group">
-            @Html.LabelFor(model => model.product.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.product.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.product.Name, "", new { @class = "text-danger" })
+                   @Html.LabelFor(model => model.product.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                   <div class="col-md-10">
+                       @Html.EditorFor(model => model.product.Name, new { htmlAttributes = new { @class = "form-control" } })
+                       @Html.ValidationMessageFor(model => model.product.Name, "", new { @class = "text-danger" })
+                   </div>
             </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.product.Description, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -51,8 +56,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.product.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.product.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.product.Image, "", new { @class = "text-danger" })
+                <input type="file" id="file" name="file" class="form-control" />
             </div>
         </div>
 
@@ -62,12 +66,13 @@
             </div>
         </div>
     </div>
+</div>
 }
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {B
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
