--- a/myShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
+++ b/myShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
@@ -30,7 +30,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            <img class="img-thumbnail" style="height:50px" src="~/Content/ProductImages/@item.Image" />
+            <img class="img-thumbnail" style="height:50px" src="@Url.Content("~/Content/ProductImages/"+item.Image+"")" />
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
