--- a/myShop/MyShop.WebUI/Views/OrderManager/UpdateOrder.cshtml
+++ b/myShop/MyShop.WebUI/Views/OrderManager/UpdateOrder.cshtml
@@ -67,12 +67,6 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.CreatAt, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DisplayFor(model => model.CreatAt, new { htmlAttributes = new { @class = "form-control" } })
-                </div>
-            </div>
         </div>
 
         <div class="form-group">
@@ -81,6 +75,8 @@
             </div>
         </div>
     </div>
+
+    @Html.Partial("OrderItems" , Model.OrderItems)
 }
 
 <div>
