--- a/myShop/MyShop.WebUI/Views/Admin/Index.cshtml
+++ b/myShop/MyShop.WebUI/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{ 
+﻿@*@{ 
     ViewBag.Title = "Admin";
 }
 
@@ -17,4 +17,4 @@
         @Html.ActionLink("Orders", "Index", "OrderManager", null, new { @class = "list-group-item" })
     </div>
 </div>
-<div class="col-md-12 clearfix"></div>
+<div class="col-md-12 clearfix"></div>*@
