--- a/myShop/MyShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/myShop/MyShop.WebUI/Views/Shared/_Layout.cshtml
@@ -17,15 +17,25 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Fresh shop", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("My Order", "MyorderDetails", "MyOrder")</li>
                     @if (Request.IsAuthenticated && User.IsInRole("Admin"))
                     {
-                        <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
+                        @*<li>@Html.ActionLink("Admin", "Index", "Admin")</li>*@
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" role="button" aria-expanded="false" href="#" data-toggle="dropdown">Admin<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu" class="nav navbar-nav">
+                                <li>@Html.ActionLink("Product Categories", "Index", "ProductCategoryManager", null, new { @class = "list-group-item" })</li>
+                                <li>@Html.ActionLink("Product", "Index", "ProductManager", null, new { @class = "list-group-item" })</li>
+                                <li>@Html.ActionLink("Orders", "Index", "OrderManager", null, new { @class = "list-group-item" })</li>
+                            </ul>
+                        </li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
