--- a/myShop/MyShop.WebUI/Views/MyOrder/Index.cshtml
+++ b/myShop/MyShop.WebUI/Views/MyOrder/Index.cshtml
@@ -1,61 +1,67 @@
-﻿@model IEnumerable<Myshop.core.Models.OrderItem>
+﻿@model IEnumerable<Myshop.core.Models.MyOrderDetails>
 
-@*<p>
+<p>
     @Html.ActionLink("Create New", "Create")
-</p>*@
+</p>
 <table class="table">
     <tr>
-        @*<th>
+        <th>
             @Html.DisplayNameFor(model => model.OrderId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ProductId)
-        </th>*@
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ProductName)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Image)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Quantity)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.price)
+            @Html.DisplayNameFor(model => model.OrderStatus)
         </th>
-        @*<th>
+        <th>
             @Html.DisplayNameFor(model => model.CreatAt)
-        </th>*@
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        @*<td>
+        <td>
             @Html.DisplayFor(modelItem => item.OrderId)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ProductId)
-        </td>*@
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ProductName)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.price)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Image)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Quantity)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.price)
+            @Html.DisplayFor(modelItem => item.OrderStatus)
         </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.CreatAt)
-        </td>*@
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            @Html.DisplayFor(modelItem => item.CreatAt)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
