--- a/myShop/MyShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/myShop/MyShop.WebUI/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
+        <div class="container" style="color:bisque;">
+            <div class="nav navbar-nav" >
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -20,16 +20,16 @@
                 @Html.ActionLink("Fresh shop", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-inverse-color">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("My Order", "MyorderDetails", "MyOrder")</li>
+                    <li>@Html.ActionLink("My Order", "Index", "MyOrder")</li>
                     @if (Request.IsAuthenticated && User.IsInRole("Admin"))
                     {
                         @*<li>@Html.ActionLink("Admin", "Index", "Admin")</li>*@
                         <li class="dropdown">
-                            <a class="dropdown-toggle" role="button" aria-expanded="false" href="#" data-toggle="dropdown">Admin<span class="caret"></span></a>
+                            <a class="dropdown-toggle" role="button" aria-expanded="false" href="#" data-toggle="dropdown">Admin<span class="carousel-inner"></span></a>
                             <ul class="dropdown-menu" role="menu" class="nav navbar-nav">
                                 <li>@Html.ActionLink("Product Categories", "Index", "ProductCategoryManager", null, new { @class = "list-group-item" })</li>
                                 <li>@Html.ActionLink("Product", "Index", "ProductManager", null, new { @class = "list-group-item" })</li>
